--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <span class="pcbr"></span>
                   새로운 수면 패러다임
                 </h3>
-                <a class="btn_more" href="/m21.php">MORE VIEW</a>
+                <a class="btn_more" href="#">MORE VIEW</a>
               </div>
             </div>
             <div class="tech bg1">
@@ -226,7 +226,7 @@
                     <span class="pcbr"></span>
                     스마트한 일상을 만들어보세요.
                   </h3>
-                  <a class="btn_more more2" href="/m31.php">MORE VIEW</a>
+                  <a class="btn_more more2" href="#">MORE VIEW</a>
                 </div>
               </div>
               <div class="merit">
@@ -278,7 +278,7 @@
               <div>
                 <h2>Media</h2>
                 <h3>슬립아이즈 기업정보 및 제품정보 영상입니다.</h3>
-                <a href="./m41.php?#sec2" class="btn_more more2">MORE VIEW</a>
+                <a href="#" class="btn_more more2">MORE VIEW</a>
               </div>
             </div>
             <div class="nn">
