--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/swiper.min.css" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script src="./js/common.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/swiper.js"></script>
     <title>SenSolution</title>
   </head>
   <body>
@@ -418,6 +415,36 @@
         </div>
       </div>
       <!-- //footer -->
+    </div>
+    <!-- //wrap -->
+    <div id="fp-nav" class="right" style="margin-top: -101.5px">
+      <ul>
+        <li>
+          <a href="#" class="active">
+            <span></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span></span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span></span>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
