--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/common.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/swiper.min.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/swiper.min.css" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/swiper.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/swiper.js"></script>
     <title>SenSolution</title>
   </head>
   <body>
