--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <div class="swiper-slide v1">
                 <div class="bg">
                   <video muted autoplay loop>
-                    <source src="/images/intro3.mp4" type="video/mp4" />
+                    <source src="./images/intro3.mp4" type="video/mp4" />
                   </video>
                 </div>
               </div>
@@ -157,7 +157,7 @@
               <div class="vnext"></div>
             </div>
             <div class="scroll">
-              <img src="/images/main/scrolldown.png" alt="Scroll Down" />
+              <img src="./images/main/scrolldown.png" alt="Scroll Down" />
               <div class="line"></div>
             </div>
           </div>
@@ -262,9 +262,9 @@
               </div>
             </div>
             <div class="imgwrap">
-              <img src="/images/main/sec3_img1.png" alt="" class="img1" />
-              <img src="/images/main/sec3_img2.png" alt="" class="img2" />
-              <img src="/images/main/sec3_img3.png" alt="" class="img3" />
+              <img src=".images/main/sec3_img1.png" alt="" class="img1" />
+              <img src="./images/main/sec3_img2.png" alt="" class="img2" />
+              <img src="./images/main/sec3_img3.png" alt="" class="img3" />
             </div>
           </div>
         </div>
