--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div>
             <div class="menuwrap">
               <div class="logoarea">
-                <img src="/images/common/all_logo.png" alt="" />
+                <img src="./images/common/all_logo.png" alt="" />
               </div>
               <div class="menuarea">
                 <ul>
