--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/common.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/swiper.min.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/swiper.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/main.js"></script>
     <title>SenSolution</title>
   </head>
   <body>
     <div id="wrap">
       <div id="header">
         <div class="head">
-          <h1><a href="#">SleepEyes</a></h1>
+          <h1>
+            <a href="#">SleepEyes</a>
+          </h1>
           <div class="pc_nav">
             <div class="bg"></div>
             <ul>
@@ -87,7 +87,7 @@
           <div>
             <div class="menuwrap">
               <div class="logoarea">
-                <img src="/images/common/all_logo.png" alt="" />
+                <img src="./images/common/all_logo.png" alt="" />
               </div>
               <div class="menuarea">
                 <ul>
@@ -139,7 +139,7 @@
               <div class="swiper-slide v1">
                 <div class="bg">
                   <video muted autoplay loop>
-                    <source src="/images/intro3.mp4" type="video/mp4" />
+                    <source src="./images/intro3.mp4" type="video/mp4" />
                   </video>
                 </div>
               </div>
@@ -157,7 +157,7 @@
               <div class="vnext"></div>
             </div>
             <div class="scroll">
-              <img src="/images/main/scrolldown.png" alt="Scroll Down" />
+              <img src="./images/main/scrolldown.png" alt="Scroll Down" />
               <div class="line"></div>
             </div>
           </div>
@@ -262,9 +262,9 @@
               </div>
             </div>
             <div class="imgwrap">
-              <img src="/images/main/sec3_img1.png" alt="" class="img1" />
-              <img src="/images/main/sec3_img2.png" alt="" class="img2" />
-              <img src="/images/main/sec3_img3.png" alt="" class="img3" />
+              <img src="./images/main/sec3_img1.png" alt="" class="img1" />
+              <img src="./images/main/sec3_img2.png" alt="" class="img2" />
+              <img src="./images/main/sec3_img3.png" alt="" class="img3" />
             </div>
           </div>
         </div>
@@ -388,7 +388,7 @@
       <!-- //contents -->
       <div id="footer">
         <div class="foot">
-          <h1><img src="/images/common/foot_logo.png" alt="" /></h1>
+          <h1><img src="./images/common/foot_logo.png" alt="" /></h1>
           <div class="info">
             <div class="contact">
               <dl>
