--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend&family=Noto+Sans+KR&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/main.js"></script>
@@ -69,12 +81,10 @@
               <li><a href="#">HOME</a></li>
               <li><a href="#">CONTACT</a></li>
             </ul>
-            <!-- +active -->
             <div class="language">
               <a>KOR <i></i></a>
               <a href="#">ENG</a>
             </div>
-            <!-- +openmenu -->
             <div class="btnmenu">
               <div></div>
               <div></div>
@@ -82,7 +92,6 @@
             </div>
           </div>
         </div>
-        <!-- +act -->
         <div class="allmenu">
           <div>
             <div class="menuwrap">
@@ -153,7 +162,9 @@
             </div>
             <div class="ctr">
               <div class="vprev"></div>
-              <div class="swiper-pagination"></div>
+              <div class="swiper-pagination">
+                <span></span>
+              </div>
               <div class="vnext"></div>
             </div>
             <div class="scroll">
