--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/swiper.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +21,7 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/swiper.js"></script>
     <title>SenSolution</title>
   </head>
   <body>
@@ -428,7 +430,7 @@
       <!-- //footer -->
     </div>
     <!-- //wrap -->
-    <div id="fp-nav" class="right" style="margin-top: -101.5px">
+    <!-- <div id="fp-nav" class="right" style="margin-top: -101.5px">
       <ul>
         <li>
           <a href="#" class="active">
@@ -456,6 +458,6 @@
           </a>
         </li>
       </ul>
-    </div>
+    </div> -->
   </body>
 </html>
