--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/pc.css" />
+    <!-- <link rel="stylesheet" href="./css/tablet.css" /> -->
+    <!-- <link rel="stylesheet" href="./css/mobile.css" /> -->
     <link rel="stylesheet" href="./css/swiper.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
